// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SideNav/SideNav Complete Side Nav Simple 1`] = `
.c2 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: inherit;
  text-align: left;
  font-weight: 600;
}

.c0 {
  box-sizing: border-box;
  position: fixed;
  bottom: 0;
  left: 0;
  top: 0;
  overflow-x: hidden;
  -webkit-transition: width 0.25s,padding-right 0.25s,padding-left 0.25s;
  transition: width 0.25s,padding-right 0.25s,padding-left 0.25s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  background: #f6f8f9;
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.32);
  z-index: 100;
  width: 270px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  padding: 8px;
  cursor: pointer;
  color: rgba(0,0,0,0.48);
}

.c1 .thumb-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  margin-right: 8px;
  font-size: 32px;
  color: rgba(0,0,0,0.48);
}

.c1 .thumb-container svg {
  display: block;
}

.c1:hover,
.c1.active {
  color: #2f313a;
  background-color: rgba(255,68,17,0.04);
}

.c1:hover .icon,
.c1.active .icon {
  color: #ff4411;
}

.c1.active {
  padding-left: 4px;
  border-left: 4px solid #ff4411;
}

.c3 {
  box-sizing: border-box;
  -webkit-overflow-scrolling: touch;
  padding-top: 0;
  -webkit-transition: margin 0.25s;
  transition: margin 0.25s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  margin-left: 270px;
}

<div
  style={
    Object {
      "minHeight": "500px",
      "transform": "scale(1)",
    }
  }
>
  <nav
    className="c0"
    data-testid="navbar-expanded"
  >
    <li
      className="c1 active"
    >
      <div
        className="c2"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        Item 1 (active)
      </div>
    </li>
    <li
      className="c1"
    >
      <div
        className="c2"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        Item 2
      </div>
    </li>
    <li
      className="c1"
    >
      <div
        className="c2"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        Item 3
      </div>
    </li>
  </nav>
  <div
    className="c3"
    data-testid="pageWrapper-navbar"
  >
    <h1>
      Page Content
    </h1>
  </div>
</div>
`;

exports[`Storyshots SideNav/SideNav Drawer Like Using Sidebar On The Right 1`] = `
.c7 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c7 .farmblocks-icon {
  display: block;
}

.c0 {
  box-sizing: border-box;
  position: fixed;
  bottom: 0;
  right: 0;
  top: 56px;
  overflow-x: hidden;
  -webkit-transition: width 0.25s,padding-right 0.25s,padding-left 0.25s;
  transition: width 0.25s,padding-right 0.25s,padding-left 0.25s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.32);
  width: 450px;
}

.c5 {
  box-sizing: border-box;
  color: rgba(0,0,0,0.48);
  font-size: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  cursor: pointer;
  border-radius: 8px;
}

.c5:hover {
  background-color: rgba(255,68,17,0.08);
  color: #ff4411;
}

.c2 {
  box-sizing: border-box;
  -webkit-overflow-scrolling: touch;
  padding-top: 0;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  height: 56px;
  box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.32);
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  background-color: white;
  z-index: 90;
}

.c1 {
  box-shadow: 0px 8px 8px 0px rgba(0,0,0,0.16);
}

.c3 {
  backgroundcolor: hotpink;
  height: 98vh;
}

.c6 {
  position: absolute;
  top: 8px;
  right: 8px;
  left: auto;
  z-index: 100;
}

<div
  style={
    Object {
      "minHeight": "500px",
      "transform": "scale(1)",
    }
  }
>
  <nav
    className="c0 c1"
    onClose={[Function]}
  />
  <div
    className="c2 c3"
    data-testid="pageWrapper-navbar"
  >
    <div
      className="c4"
    />
    <div
      className="c5 c6"
      onClick={[Function]}
      role="button"
    >
      <span
        className="c7"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height="1em"
          viewBox="4 4 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M28 25a1 1 0 0 1 0 2H12a1 1 0 0 1 0-2h16Zm0-6a1 1 0 0 1 0 2H12a1 1 0 0 1 0-2h16Zm0-6a1 1 0 0 1 0 2H12a1 1 0 0 1 0-2h16Z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots SideNav/SideNav Side Nav Full Screen 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: inherit;
  text-align: left;
  font-weight: 600;
}

.c10 {
  font-family: Lato,sans-serif;
  font-size: 32px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
  text-transform: uppercase;
}

.c11 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
}

.c3 {
  box-sizing: border-box;
  position: fixed;
  bottom: 0;
  left: 0;
  top: 0;
  overflow-x: hidden;
  -webkit-transition: width 0.25s,padding-right 0.25s,padding-left 0.25s;
  transition: width 0.25s,padding-right 0.25s,padding-left 0.25s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  background: #f6f8f9;
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.32);
  z-index: 100;
  top: 0;
  padding: 16px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 1px;
  -webkit-transform: translate(1px);
  -ms-transform: translate(1px);
  transform: translate(1px);
  -webkit-backdrop-filter: blur(8px);
  backdrop-filter: blur(8px);
  background: #f6f8f9;
}

.c0 {
  box-sizing: border-box;
  color: #ff4411;
  font-size: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  cursor: pointer;
  border-radius: 8px;
}

.c0:hover {
  background-color: rgba(255,68,17,0.08);
  color: #ff4411;
}

.c4 {
  box-sizing: border-box;
  color: rgba(0,0,0,0.48);
  font-size: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  cursor: pointer;
  border-radius: 8px;
}

.c4:hover {
  background-color: rgba(255,68,17,0.08);
  color: #ff4411;
}

.c5 {
  position: absolute;
  top: 8px;
  right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 0;
  -webkit-transition: 0.25s;
  transition: 0.25s;
}

.c1 {
  position: fixed;
  top: 8px;
  left: 8px;
  z-index: 90;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  padding: 8px;
  cursor: pointer;
  color: rgba(0,0,0,0.48);
  border-radius: 90px;
  padding: 8px 16px;
}

.c7 .thumb-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  margin-right: 8px;
  font-size: 32px;
  color: rgba(0,0,0,0.48);
}

.c7 .thumb-container svg {
  display: block;
}

.c7:hover,
.c7.active {
  color: #2f313a;
  background-color: rgba(255,68,17,0.04);
}

.c7:hover .icon,
.c7.active .icon {
  color: #ff4411;
}

.c7.active {
  padding-left: 4px;
  border-left: 4px solid #ff4411;
}

.c7:hover,
.c7.active {
  color: #ff4411;
}

.c7.active {
  padding-left: 16px;
  border-left: none;
}

.c9 {
  box-sizing: border-box;
  -webkit-overflow-scrolling: touch;
  padding-top: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  min-height: 56px;
  box-sizing: border-box;
  overflow-x: hidden;
}

<div
  style={
    Object {
      "minHeight": "500px",
      "transform": "scale(1)",
    }
  }
>
  <div
    className="c0 c1"
    data-testid="toggle-navbar"
    onClick={[Function]}
    role="button"
  >
    <span
      className="c2"
      color="currentColor"
      size="1em"
    >
      <svg
        aria-hidden={true}
        className="farmblocks-icon "
        height="1em"
        viewBox="4 4 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M28 25a1 1 0 0 1 0 2H12a1 1 0 0 1 0-2h16Zm0-6a1 1 0 0 1 0 2H12a1 1 0 0 1 0-2h16Zm0-6a1 1 0 0 1 0 2H12a1 1 0 0 1 0-2h16Z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </svg>
    </span>
  </div>
  <nav
    className="c3"
    data-testid="navbar-collapsed"
  >
    <div
      className="c4 c5"
      data-testid="close-navbar"
      onClick={[Function]}
      role="button"
    >
      <span
        className="c2"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height={24}
          viewBox="2 2 20 20"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m13.414 12 2.829-2.828a1 1 0 0 0-1.415-1.415L12 10.586 9.172 7.757a1 1 0 0 0-1.415 1.415L10.586 12l-2.829 2.828a1 1 0 0 0 1.415 1.415L12 13.414l2.828 2.829a1 1 0 0 0 1.415-1.415L13.414 12Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      className="c6"
    />
    <li
      className="c7 active"
      onClick={[Function]}
    >
      <div
        className="thumb-container"
      >
        <span
          className="icon"
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="4 4 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.5 30H22v-4.576c0-.796-.574-1.424-1.258-1.424H18.5v6Zm-1 0v-6h-2.243c-.684 0-1.257.628-1.257 1.424V30h3.5Zm5.5 0h5v-7.473l-3.394-6.615-6.53-2.851-6.407 2.855L8 22.544V30h5v-4.576C13 24.094 14 23 15.257 23h5.485C21.999 23 23 24.095 23 25.424V30Zm-1-17.408v-.868C22 8.55 24.699 6 28 6s6 2.55 6 5.724V30h1c1.333 0 1.333 2 0 2H5c-1.333 0-1.333-2 0-2h1v-7.714a1 1 0 0 1 .125-.485l3.957-7.147a1 1 0 0 1 .468-.429l7.043-3.138A1 1 0 0 1 18 11h.145a1 1 0 0 1 .4.084L22 12.592Zm2 .873 1.733.757a1 1 0 0 1 .49.46l3.667 7.147a1 1 0 0 1 .11.457V30h2V11.724C32 9.681 30.221 8 28 8s-4 1.68-4 3.724v1.741ZM19.5 19a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0Zm1 0a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0Z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        className="c8"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        purveyor
      </div>
    </li>
    <li
      className="c7"
      onClick={[Function]}
    >
      <div
        className="thumb-container"
      >
        <span
          className="icon"
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="4 4 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M29.666 11.437a1 1 0 0 1 .334.746V32a1 1 0 0 1-1 1H11a1 1 0 0 1-1-1V8a1 1 0 0 1 1-1h13.313a1 1 0 0 1 .666.254l4.687 4.183ZM28 13h-4V9.061L23.932 9H12v22h16V13Zm-13 4.25a.75.75 0 1 1 0-1.5h10a.75.75 0 1 1 0 1.5H15Zm0 3a.75.75 0 1 1 0-1.5h10a.75.75 0 1 1 0 1.5H15Zm0 3a.75.75 0 1 1 0-1.5h10a.75.75 0 1 1 0 1.5H15Z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        className="c8"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        order
      </div>
    </li>
    <li
      className="c7"
      onClick={[Function]}
    >
      <div
        className="thumb-container"
      >
        <span
          className="icon"
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="4 4 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22.46 22.271a.952.952 0 0 1 .063-.059 7.447 7.447 0 0 0 1.837-4.918c0-4.08-3.244-7.39-7.246-7.39-4.002 0-7.247 3.309-7.247 7.39 0 4.082 3.245 7.391 7.247 7.391a7.159 7.159 0 0 0 5.242-2.287.954.954 0 0 1 .104-.127Zm9.267 8.104a.966.966 0 0 1 0 1.346.92.92 0 0 1-1.32 0l-7.29-7.433a8.977 8.977 0 0 1-6.003 2.302C12.08 26.59 8 22.428 8 17.294 8 12.161 12.08 8 17.114 8c5.033 0 9.113 4.161 9.113 9.294a9.376 9.376 0 0 1-1.837 5.599l7.337 7.482Z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        className="c8"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        search
      </div>
    </li>
    <li
      className="c7"
      onClick={[Function]}
    >
      <div
        className="thumb-container"
      >
        <span
          className="icon"
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="6 6 88 88"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M62.685 80.57c-.1-.44-.08-.383-.649-1.909-1.159-3.104-1.336-5.45-.06-8.906l.05-.117c.668-1.425 1.716-3.008 3.485-5.38-.264.354 3.692-4.862 4.844-6.462 7.792-10.827 10.585-19.43 7.131-28.58-1.285-3.126-1.653-3.968-2.46-5.46-2.165-4.003-4.997-6.894-9.34-8.948-9.378-4.367-27.318-.8-36.945 8.468-12.13 11.679-10.585 29.77 9.126 52.926 6.535 7.25 11.935 10.582 16.305 10.808 3.172.164 5.716-1.302 8.01-4.08.584-.872.693-1.516.503-2.36Zm2.162-2.958.204.542c.084.222.146.391.205.557.156.444.27.822.356 1.2.373 1.661.103 3.168-.991 4.766l-.077.103c-2.853 3.48-6.239 5.447-10.527 5.226-5.306-.275-11.361-4.011-18.407-11.827-20.672-24.284-22.367-44.145-8.95-57.064 10.495-10.103 29.755-13.933 40.301-9.023 4.967 2.35 8.252 5.702 10.704 10.238.877 1.62 1.267 2.512 2.612 5.785 3.917 10.376.834 19.87-7.487 31.433-1.178 1.637-5.158 6.885-4.874 6.504-1.627 2.181-2.586 3.625-3.148 4.803-.97 2.66-.842 4.29.079 6.757Zm-8.057 2.152c-1.304-3.758-1.459-7.338.206-11.847l.119-.312.105-.224c1.042-2.22 2.265-3.982 5.693-8.49 4.73-6.217 6.795-9.27 8.549-13.182 2.33-5.197 2.794-9.956 1.078-14.562l-.145-.353c-2.09-5.1-3.25-7.122-5.754-9.176a1 1 0 0 1 1.269-1.546c2.84 2.33 4.124 4.569 6.336 9.963l.157.384c1.93 5.177 1.414 10.467-1.116 16.108-1.838 4.099-3.959 7.235-8.782 13.576-3.333 4.38-4.517 6.087-5.475 8.13l-.072.144-.085.232c-1.49 4.036-1.356 7.15-.194 10.5.11.317.2.56.392 1.067l.125.332a1 1 0 0 1-.212 1.044c-1.507 1.577-2.857 2.161-4.345 2.161-3.25 0-7.968-2.702-14.278-9.687a111.159 111.159 0 0 1-5.146-6.51 1 1 0 0 1 1.616-1.178 109.173 109.173 0 0 0 5.034 6.37c5.946 6.581 10.179 9.005 12.774 9.005.812 0 1.542-.268 2.456-1.107-.13-.349-.21-.568-.305-.842ZM30.214 55.516a1 1 0 1 1-1.8.87c-4.48-9.257-5.235-17.439-2.136-24.146 4.463-9.663 17.217-15.932 29.578-15.932 2.118 0 4.1.21 5.804.614a1 1 0 0 1-.462 1.946c-1.545-.366-3.373-.56-5.342-.56-11.65 0-23.669 5.907-27.762 14.77-2.819 6.1-2.12 13.676 2.12 22.438Zm4.291 7.473a1 1 0 1 1-1.67 1.1 75.738 75.738 0 0 1-1.927-3.078 1 1 0 1 1 1.72-1.02 73.74 73.74 0 0 0 1.877 2.998Zm5.319-21.048a4 4 0 1 1 0-8h20a4 4 0 1 1 0 8h-6v10a4 4 0 1 1-8 0v-10h-6Zm20-6h-20a2 2 0 1 0 0 4h7a1 1 0 0 1 1 1v11a2 2 0 1 0 4 0v-11a1 1 0 0 1 1-1h7a2 2 0 1 0 0-4Z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        className="c8"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        meat
      </div>
    </li>
  </nav>
  <div
    className="c9"
    data-testid="pageWrapper-navbar"
  >
    <div
      style={
        Object {
          "boxSizing": "border-box",
          "height": "100vh",
          "margin": "0 24px",
          "padding": "24px",
        }
      }
    >
      <div
        className="c10"
        fontWeight="title"
        size={32}
        type="#2f313a"
      >
        fullScreen
      </div>
      <div
        style={
          Object {
            "margin": "16px 0",
          }
        }
      >
        <div
          className="c11"
          size={18}
          type="#2f313a"
        >
          Lorem iTextsum dolor sit amet, consectetur adipisicing elit. Qui dicta minus molestiae vel beatae natus eveniet ratione temporibus aperiam harum alias officiis assumenda officia quibusdam deleniti eos cupiditate dolore doloribus!
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SideNav/SideNav Side Nav Overlay 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: inherit;
  text-align: left;
  font-weight: 600;
}

.c10 {
  font-family: Lato,sans-serif;
  font-size: 32px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
  text-transform: uppercase;
}

.c11 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
}

.c3 {
  box-sizing: border-box;
  position: fixed;
  bottom: 0;
  left: 0;
  top: 0;
  overflow-x: hidden;
  -webkit-transition: width 0.25s,padding-right 0.25s,padding-left 0.25s;
  transition: width 0.25s,padding-right 0.25s,padding-left 0.25s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  background: #f6f8f9;
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.32);
  z-index: 100;
  width: 0px;
}

.c0 {
  box-sizing: border-box;
  color: #ff4411;
  font-size: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  cursor: pointer;
  border-radius: 8px;
}

.c0:hover {
  background-color: rgba(255,68,17,0.08);
  color: #ff4411;
}

.c4 {
  box-sizing: border-box;
  color: rgba(0,0,0,0.48);
  font-size: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  cursor: pointer;
  border-radius: 8px;
}

.c4:hover {
  background-color: rgba(255,68,17,0.08);
  color: #ff4411;
}

.c5 {
  position: absolute;
  top: 8px;
  right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 0;
  -webkit-transition: 0.25s;
  transition: 0.25s;
}

.c1 {
  position: fixed;
  top: 8px;
  left: 8px;
  z-index: 90;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  padding: 8px;
  cursor: pointer;
  color: rgba(0,0,0,0.48);
}

.c7 .thumb-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  margin-right: 8px;
  font-size: 32px;
  color: rgba(0,0,0,0.48);
}

.c7 .thumb-container svg {
  display: block;
}

.c7:hover,
.c7.active {
  color: #2f313a;
  background-color: rgba(255,68,17,0.04);
}

.c7:hover .icon,
.c7.active .icon {
  color: #ff4411;
}

.c7.active {
  padding-left: 4px;
  border-left: 4px solid #ff4411;
}

.c9 {
  box-sizing: border-box;
  -webkit-overflow-scrolling: touch;
  padding-top: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  min-height: 56px;
  box-sizing: border-box;
  overflow-x: hidden;
}

<div
  style={
    Object {
      "minHeight": "500px",
      "transform": "scale(1)",
    }
  }
>
  <div
    className="c0 c1"
    data-testid="toggle-navbar"
    onClick={[Function]}
    role="button"
  >
    <span
      className="c2"
      color="currentColor"
      size="1em"
    >
      <svg
        aria-hidden={true}
        className="farmblocks-icon "
        height="1em"
        viewBox="4 4 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M28 25a1 1 0 0 1 0 2H12a1 1 0 0 1 0-2h16Zm0-6a1 1 0 0 1 0 2H12a1 1 0 0 1 0-2h16Zm0-6a1 1 0 0 1 0 2H12a1 1 0 0 1 0-2h16Z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </svg>
    </span>
  </div>
  <nav
    className="c3"
    data-testid="navbar-collapsed"
  >
    <div
      className="c4 c5"
      data-testid="close-navbar"
      onClick={[Function]}
      role="button"
    >
      <span
        className="c2"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height={24}
          viewBox="2 2 20 20"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m13.414 12 2.829-2.828a1 1 0 0 0-1.415-1.415L12 10.586 9.172 7.757a1 1 0 0 0-1.415 1.415L10.586 12l-2.829 2.828a1 1 0 0 0 1.415 1.415L12 13.414l2.828 2.829a1 1 0 0 0 1.415-1.415L13.414 12Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      className="c6"
    />
    <li
      className="c7 active"
      onClick={[Function]}
    >
      <div
        className="thumb-container"
      >
        <span
          className="icon"
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="4 4 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.5 30H22v-4.576c0-.796-.574-1.424-1.258-1.424H18.5v6Zm-1 0v-6h-2.243c-.684 0-1.257.628-1.257 1.424V30h3.5Zm5.5 0h5v-7.473l-3.394-6.615-6.53-2.851-6.407 2.855L8 22.544V30h5v-4.576C13 24.094 14 23 15.257 23h5.485C21.999 23 23 24.095 23 25.424V30Zm-1-17.408v-.868C22 8.55 24.699 6 28 6s6 2.55 6 5.724V30h1c1.333 0 1.333 2 0 2H5c-1.333 0-1.333-2 0-2h1v-7.714a1 1 0 0 1 .125-.485l3.957-7.147a1 1 0 0 1 .468-.429l7.043-3.138A1 1 0 0 1 18 11h.145a1 1 0 0 1 .4.084L22 12.592Zm2 .873 1.733.757a1 1 0 0 1 .49.46l3.667 7.147a1 1 0 0 1 .11.457V30h2V11.724C32 9.681 30.221 8 28 8s-4 1.68-4 3.724v1.741ZM19.5 19a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0Zm1 0a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0Z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        className="c8"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        purveyor
      </div>
    </li>
    <li
      className="c7"
      onClick={[Function]}
    >
      <div
        className="thumb-container"
      >
        <span
          className="icon"
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="4 4 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M29.666 11.437a1 1 0 0 1 .334.746V32a1 1 0 0 1-1 1H11a1 1 0 0 1-1-1V8a1 1 0 0 1 1-1h13.313a1 1 0 0 1 .666.254l4.687 4.183ZM28 13h-4V9.061L23.932 9H12v22h16V13Zm-13 4.25a.75.75 0 1 1 0-1.5h10a.75.75 0 1 1 0 1.5H15Zm0 3a.75.75 0 1 1 0-1.5h10a.75.75 0 1 1 0 1.5H15Zm0 3a.75.75 0 1 1 0-1.5h10a.75.75 0 1 1 0 1.5H15Z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        className="c8"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        order
      </div>
    </li>
    <li
      className="c7"
      onClick={[Function]}
    >
      <div
        className="thumb-container"
      >
        <span
          className="icon"
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="4 4 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22.46 22.271a.952.952 0 0 1 .063-.059 7.447 7.447 0 0 0 1.837-4.918c0-4.08-3.244-7.39-7.246-7.39-4.002 0-7.247 3.309-7.247 7.39 0 4.082 3.245 7.391 7.247 7.391a7.159 7.159 0 0 0 5.242-2.287.954.954 0 0 1 .104-.127Zm9.267 8.104a.966.966 0 0 1 0 1.346.92.92 0 0 1-1.32 0l-7.29-7.433a8.977 8.977 0 0 1-6.003 2.302C12.08 26.59 8 22.428 8 17.294 8 12.161 12.08 8 17.114 8c5.033 0 9.113 4.161 9.113 9.294a9.376 9.376 0 0 1-1.837 5.599l7.337 7.482Z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        className="c8"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        search
      </div>
    </li>
    <li
      className="c7"
      onClick={[Function]}
    >
      <div
        className="thumb-container"
      >
        <span
          className="icon"
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="6 6 88 88"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M62.685 80.57c-.1-.44-.08-.383-.649-1.909-1.159-3.104-1.336-5.45-.06-8.906l.05-.117c.668-1.425 1.716-3.008 3.485-5.38-.264.354 3.692-4.862 4.844-6.462 7.792-10.827 10.585-19.43 7.131-28.58-1.285-3.126-1.653-3.968-2.46-5.46-2.165-4.003-4.997-6.894-9.34-8.948-9.378-4.367-27.318-.8-36.945 8.468-12.13 11.679-10.585 29.77 9.126 52.926 6.535 7.25 11.935 10.582 16.305 10.808 3.172.164 5.716-1.302 8.01-4.08.584-.872.693-1.516.503-2.36Zm2.162-2.958.204.542c.084.222.146.391.205.557.156.444.27.822.356 1.2.373 1.661.103 3.168-.991 4.766l-.077.103c-2.853 3.48-6.239 5.447-10.527 5.226-5.306-.275-11.361-4.011-18.407-11.827-20.672-24.284-22.367-44.145-8.95-57.064 10.495-10.103 29.755-13.933 40.301-9.023 4.967 2.35 8.252 5.702 10.704 10.238.877 1.62 1.267 2.512 2.612 5.785 3.917 10.376.834 19.87-7.487 31.433-1.178 1.637-5.158 6.885-4.874 6.504-1.627 2.181-2.586 3.625-3.148 4.803-.97 2.66-.842 4.29.079 6.757Zm-8.057 2.152c-1.304-3.758-1.459-7.338.206-11.847l.119-.312.105-.224c1.042-2.22 2.265-3.982 5.693-8.49 4.73-6.217 6.795-9.27 8.549-13.182 2.33-5.197 2.794-9.956 1.078-14.562l-.145-.353c-2.09-5.1-3.25-7.122-5.754-9.176a1 1 0 0 1 1.269-1.546c2.84 2.33 4.124 4.569 6.336 9.963l.157.384c1.93 5.177 1.414 10.467-1.116 16.108-1.838 4.099-3.959 7.235-8.782 13.576-3.333 4.38-4.517 6.087-5.475 8.13l-.072.144-.085.232c-1.49 4.036-1.356 7.15-.194 10.5.11.317.2.56.392 1.067l.125.332a1 1 0 0 1-.212 1.044c-1.507 1.577-2.857 2.161-4.345 2.161-3.25 0-7.968-2.702-14.278-9.687a111.159 111.159 0 0 1-5.146-6.51 1 1 0 0 1 1.616-1.178 109.173 109.173 0 0 0 5.034 6.37c5.946 6.581 10.179 9.005 12.774 9.005.812 0 1.542-.268 2.456-1.107-.13-.349-.21-.568-.305-.842ZM30.214 55.516a1 1 0 1 1-1.8.87c-4.48-9.257-5.235-17.439-2.136-24.146 4.463-9.663 17.217-15.932 29.578-15.932 2.118 0 4.1.21 5.804.614a1 1 0 0 1-.462 1.946c-1.545-.366-3.373-.56-5.342-.56-11.65 0-23.669 5.907-27.762 14.77-2.819 6.1-2.12 13.676 2.12 22.438Zm4.291 7.473a1 1 0 1 1-1.67 1.1 75.738 75.738 0 0 1-1.927-3.078 1 1 0 1 1 1.72-1.02 73.74 73.74 0 0 0 1.877 2.998Zm5.319-21.048a4 4 0 1 1 0-8h20a4 4 0 1 1 0 8h-6v10a4 4 0 1 1-8 0v-10h-6Zm20-6h-20a2 2 0 1 0 0 4h7a1 1 0 0 1 1 1v11a2 2 0 1 0 4 0v-11a1 1 0 0 1 1-1h7a2 2 0 1 0 0-4Z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        className="c8"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        meat
      </div>
    </li>
  </nav>
  <div
    className="c9"
    data-testid="pageWrapper-navbar"
  >
    <div
      style={
        Object {
          "boxSizing": "border-box",
          "height": "100vh",
          "margin": "0 24px",
          "padding": "24px",
        }
      }
    >
      <div
        className="c10"
        fontWeight="title"
        size={32}
        type="#2f313a"
      >
        overlay
      </div>
      <div
        style={
          Object {
            "margin": "16px 0",
          }
        }
      >
        <div
          className="c11"
          size={18}
          type="#2f313a"
        >
          Lorem iTextsum dolor sit amet, consectetur adipisicing elit. Qui dicta minus molestiae vel beatae natus eveniet ratione temporibus aperiam harum alias officiis assumenda officia quibusdam deleniti eos cupiditate dolore doloribus!
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SideNav/SideNav Side Nav Push 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c8 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: inherit;
  text-align: left;
  font-weight: 600;
}

.c10 {
  font-family: Lato,sans-serif;
  font-size: 32px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-weight: 600;
  text-transform: uppercase;
}

.c11 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
}

.c3 {
  box-sizing: border-box;
  position: fixed;
  bottom: 0;
  left: 0;
  top: 0;
  overflow-x: hidden;
  -webkit-transition: width 0.25s,padding-right 0.25s,padding-left 0.25s;
  transition: width 0.25s,padding-right 0.25s,padding-left 0.25s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  background: #f6f8f9;
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.32);
  z-index: 100;
  width: 56px;
}

.c0 {
  box-sizing: border-box;
  color: #ff4411;
  font-size: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  cursor: pointer;
  border-radius: 8px;
}

.c0:hover {
  background-color: rgba(255,68,17,0.08);
  color: #ff4411;
}

.c4 {
  box-sizing: border-box;
  color: rgba(0,0,0,0.48);
  font-size: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  cursor: pointer;
  border-radius: 8px;
}

.c4:hover {
  background-color: rgba(255,68,17,0.08);
  color: #ff4411;
}

.c5 {
  position: absolute;
  top: 8px;
  right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 0;
  -webkit-transition: 0.25s;
  transition: 0.25s;
  display: none;
}

.c1 {
  position: fixed;
  top: 8px;
  left: 8px;
  z-index: 110;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
  padding: 8px;
  cursor: pointer;
  color: rgba(0,0,0,0.48);
}

.c7 .thumb-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  margin-right: 8px;
  font-size: 32px;
  color: rgba(0,0,0,0.48);
}

.c7 .thumb-container svg {
  display: block;
}

.c7:hover,
.c7.active {
  color: #2f313a;
  background-color: rgba(255,68,17,0.04);
}

.c7:hover .icon,
.c7.active .icon {
  color: #ff4411;
}

.c7.active {
  padding-left: 4px;
  border-left: 4px solid #ff4411;
}

.c9 {
  box-sizing: border-box;
  -webkit-overflow-scrolling: touch;
  padding-top: 0;
  -webkit-transition: margin 0.25s;
  transition: margin 0.25s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  margin-left: 56px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  min-height: 56px;
  box-sizing: border-box;
  overflow-x: hidden;
}

<div
  style={
    Object {
      "minHeight": "500px",
      "transform": "scale(1)",
    }
  }
>
  <div
    className="c0 c1"
    data-testid="toggle-navbar"
    onClick={[Function]}
    role="button"
  >
    <span
      className="c2"
      color="currentColor"
      size="1em"
    >
      <svg
        aria-hidden={true}
        className="farmblocks-icon "
        height="1em"
        viewBox="4 4 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M28 25a1 1 0 0 1 0 2H12a1 1 0 0 1 0-2h16Zm0-6a1 1 0 0 1 0 2H12a1 1 0 0 1 0-2h16Zm0-6a1 1 0 0 1 0 2H12a1 1 0 0 1 0-2h16Z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </svg>
    </span>
  </div>
  <nav
    className="c3"
    data-testid="navbar-collapsed"
  >
    <div
      className="c4 c5"
      data-testid="close-navbar"
      onClick={[Function]}
      role="button"
    >
      <span
        className="c2"
        color="currentColor"
        size="1em"
      >
        <svg
          aria-hidden={true}
          className="farmblocks-icon "
          height={24}
          viewBox="2 2 20 20"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m13.414 12 2.829-2.828a1 1 0 0 0-1.415-1.415L12 10.586 9.172 7.757a1 1 0 0 0-1.415 1.415L10.586 12l-2.829 2.828a1 1 0 0 0 1.415 1.415L12 13.414l2.828 2.829a1 1 0 0 0 1.415-1.415L13.414 12Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      className="c6"
    />
    <li
      className="c7 active"
      onClick={[Function]}
    >
      <div
        className="thumb-container"
      >
        <span
          className="icon"
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="4 4 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.5 30H22v-4.576c0-.796-.574-1.424-1.258-1.424H18.5v6Zm-1 0v-6h-2.243c-.684 0-1.257.628-1.257 1.424V30h3.5Zm5.5 0h5v-7.473l-3.394-6.615-6.53-2.851-6.407 2.855L8 22.544V30h5v-4.576C13 24.094 14 23 15.257 23h5.485C21.999 23 23 24.095 23 25.424V30Zm-1-17.408v-.868C22 8.55 24.699 6 28 6s6 2.55 6 5.724V30h1c1.333 0 1.333 2 0 2H5c-1.333 0-1.333-2 0-2h1v-7.714a1 1 0 0 1 .125-.485l3.957-7.147a1 1 0 0 1 .468-.429l7.043-3.138A1 1 0 0 1 18 11h.145a1 1 0 0 1 .4.084L22 12.592Zm2 .873 1.733.757a1 1 0 0 1 .49.46l3.667 7.147a1 1 0 0 1 .11.457V30h2V11.724C32 9.681 30.221 8 28 8s-4 1.68-4 3.724v1.741ZM19.5 19a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0Zm1 0a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0Z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        className="c8"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        purveyor
      </div>
    </li>
    <li
      className="c7"
      onClick={[Function]}
    >
      <div
        className="thumb-container"
      >
        <span
          className="icon"
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="4 4 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M29.666 11.437a1 1 0 0 1 .334.746V32a1 1 0 0 1-1 1H11a1 1 0 0 1-1-1V8a1 1 0 0 1 1-1h13.313a1 1 0 0 1 .666.254l4.687 4.183ZM28 13h-4V9.061L23.932 9H12v22h16V13Zm-13 4.25a.75.75 0 1 1 0-1.5h10a.75.75 0 1 1 0 1.5H15Zm0 3a.75.75 0 1 1 0-1.5h10a.75.75 0 1 1 0 1.5H15Zm0 3a.75.75 0 1 1 0-1.5h10a.75.75 0 1 1 0 1.5H15Z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        className="c8"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        order
      </div>
    </li>
    <li
      className="c7"
      onClick={[Function]}
    >
      <div
        className="thumb-container"
      >
        <span
          className="icon"
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="4 4 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22.46 22.271a.952.952 0 0 1 .063-.059 7.447 7.447 0 0 0 1.837-4.918c0-4.08-3.244-7.39-7.246-7.39-4.002 0-7.247 3.309-7.247 7.39 0 4.082 3.245 7.391 7.247 7.391a7.159 7.159 0 0 0 5.242-2.287.954.954 0 0 1 .104-.127Zm9.267 8.104a.966.966 0 0 1 0 1.346.92.92 0 0 1-1.32 0l-7.29-7.433a8.977 8.977 0 0 1-6.003 2.302C12.08 26.59 8 22.428 8 17.294 8 12.161 12.08 8 17.114 8c5.033 0 9.113 4.161 9.113 9.294a9.376 9.376 0 0 1-1.837 5.599l7.337 7.482Z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        className="c8"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        search
      </div>
    </li>
    <li
      className="c7"
      onClick={[Function]}
    >
      <div
        className="thumb-container"
      >
        <span
          className="icon"
        >
          <span
            className="c2"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="6 6 88 88"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M62.685 80.57c-.1-.44-.08-.383-.649-1.909-1.159-3.104-1.336-5.45-.06-8.906l.05-.117c.668-1.425 1.716-3.008 3.485-5.38-.264.354 3.692-4.862 4.844-6.462 7.792-10.827 10.585-19.43 7.131-28.58-1.285-3.126-1.653-3.968-2.46-5.46-2.165-4.003-4.997-6.894-9.34-8.948-9.378-4.367-27.318-.8-36.945 8.468-12.13 11.679-10.585 29.77 9.126 52.926 6.535 7.25 11.935 10.582 16.305 10.808 3.172.164 5.716-1.302 8.01-4.08.584-.872.693-1.516.503-2.36Zm2.162-2.958.204.542c.084.222.146.391.205.557.156.444.27.822.356 1.2.373 1.661.103 3.168-.991 4.766l-.077.103c-2.853 3.48-6.239 5.447-10.527 5.226-5.306-.275-11.361-4.011-18.407-11.827-20.672-24.284-22.367-44.145-8.95-57.064 10.495-10.103 29.755-13.933 40.301-9.023 4.967 2.35 8.252 5.702 10.704 10.238.877 1.62 1.267 2.512 2.612 5.785 3.917 10.376.834 19.87-7.487 31.433-1.178 1.637-5.158 6.885-4.874 6.504-1.627 2.181-2.586 3.625-3.148 4.803-.97 2.66-.842 4.29.079 6.757Zm-8.057 2.152c-1.304-3.758-1.459-7.338.206-11.847l.119-.312.105-.224c1.042-2.22 2.265-3.982 5.693-8.49 4.73-6.217 6.795-9.27 8.549-13.182 2.33-5.197 2.794-9.956 1.078-14.562l-.145-.353c-2.09-5.1-3.25-7.122-5.754-9.176a1 1 0 0 1 1.269-1.546c2.84 2.33 4.124 4.569 6.336 9.963l.157.384c1.93 5.177 1.414 10.467-1.116 16.108-1.838 4.099-3.959 7.235-8.782 13.576-3.333 4.38-4.517 6.087-5.475 8.13l-.072.144-.085.232c-1.49 4.036-1.356 7.15-.194 10.5.11.317.2.56.392 1.067l.125.332a1 1 0 0 1-.212 1.044c-1.507 1.577-2.857 2.161-4.345 2.161-3.25 0-7.968-2.702-14.278-9.687a111.159 111.159 0 0 1-5.146-6.51 1 1 0 0 1 1.616-1.178 109.173 109.173 0 0 0 5.034 6.37c5.946 6.581 10.179 9.005 12.774 9.005.812 0 1.542-.268 2.456-1.107-.13-.349-.21-.568-.305-.842ZM30.214 55.516a1 1 0 1 1-1.8.87c-4.48-9.257-5.235-17.439-2.136-24.146 4.463-9.663 17.217-15.932 29.578-15.932 2.118 0 4.1.21 5.804.614a1 1 0 0 1-.462 1.946c-1.545-.366-3.373-.56-5.342-.56-11.65 0-23.669 5.907-27.762 14.77-2.819 6.1-2.12 13.676 2.12 22.438Zm4.291 7.473a1 1 0 1 1-1.67 1.1 75.738 75.738 0 0 1-1.927-3.078 1 1 0 1 1 1.72-1.02 73.74 73.74 0 0 0 1.877 2.998Zm5.319-21.048a4 4 0 1 1 0-8h20a4 4 0 1 1 0 8h-6v10a4 4 0 1 1-8 0v-10h-6Zm20-6h-20a2 2 0 1 0 0 4h7a1 1 0 0 1 1 1v11a2 2 0 1 0 4 0v-11a1 1 0 0 1 1-1h7a2 2 0 1 0 0-4Z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </span>
      </div>
      <div
        className="c8"
        fontWeight="title"
        size={18}
        type="inherit"
      >
        meat
      </div>
    </li>
  </nav>
  <div
    className="c9"
    data-testid="pageWrapper-navbar"
  >
    <div
      style={
        Object {
          "boxSizing": "border-box",
          "height": "100vh",
          "margin": "0 24px",
          "padding": "24px",
        }
      }
    >
      <div
        className="c10"
        fontWeight="title"
        size={32}
        type="#2f313a"
      >
        push
      </div>
      <div
        style={
          Object {
            "margin": "16px 0",
          }
        }
      >
        <div
          className="c11"
          size={18}
          type="#2f313a"
        >
          Lorem iTextsum dolor sit amet, consectetur adipisicing elit. Qui dicta minus molestiae vel beatae natus eveniet ratione temporibus aperiam harum alias officiis assumenda officia quibusdam deleniti eos cupiditate dolore doloribus!
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots SideNav/SideNav Side Nav Simple 1`] = `
.c0 {
  box-sizing: border-box;
  position: fixed;
  bottom: 0;
  left: 0;
  top: 0;
  overflow-x: hidden;
  -webkit-transition: width 0.25s,padding-right 0.25s,padding-left 0.25s;
  transition: width 0.25s,padding-right 0.25s,padding-left 0.25s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  background: #f6f8f9;
  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.32);
  z-index: 100;
  width: 270px;
}

<div
  style={
    Object {
      "minHeight": "500px",
      "transform": "scale(1)",
    }
  }
>
  <nav
    className="c0"
    data-testid="navbar-expanded"
  >
    <div>
      SideBar Content
    </div>
  </nav>
</div>
`;
